# wmm-rs

./: Cargo.toml
src/: constants.rs  lib.rs  utils.rs
tests/: integration_tests.rs  wmm2015_testdata.json  wmm2020_testdata.json
