[package]
name = "wmm-rs"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
float_eq = "1.0.1"
wmm = "0.2.3"
time = "0.3.34"